--- a/frontend/src/assets/quasar-variables.sass
+++ b/frontend/src/assets/quasar-variables.sass
@@ -1,10 +1,12 @@
-$primary   : #1976D2
-$secondary : #26A69A
-$accent    : #9C27B0
+$primary: #2196F3
+$secondary: #90CAF9
+$accent: #9C27B0
 
-$dark      : #1D1D1D
+$selected: #A9D3F5
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #F2C037
+$dark: #1D1D1D
+
+$positive: #21BA45
+$negative: #C10015
+$info: #31CCEC
+$warning: #F2C037
