--- a/frontend/src/assets/quasar-variables.sass
+++ b/frontend/src/assets/quasar-variables.sass
@@ -1,8 +1,10 @@
 $primary: #2196F3
 $secondary: #90CAF9
+$background: #64B5F6
 $accent: #9C27B0
 
 $selected: #A9D3F5
+$button: #1976d2
 
 $dark: #1D1D1D
 
